# dep-tut

./: .ghci  .gitignore  README.md  cabal.project  dep-tut.cabal  flake.nix  hie.yaml
nix/: dep-tut.nix  dev-env.nix  haskellPackages.nix  shell.nix
src/: DepTutMain.hs  DepTutMain.js  DepTutQQ.hs  STLC.hs
src-exe/: Main.hs
src-mala-exe/: Main.hs
src-tests/: HelloSpec.hs  Main.hs  QQSpec.hs
src-ubik-exe/: Main.hs
ssl/: create-self-signed.sh  localhost.key  localhost.pem
workflows/: start-dev-env.sh  tmux-dev.sh
