cabal-version:       3.6
name:                dep-tut
version:             0.1.0.0
synopsis:            Dependently typed language tutorial
license:             NONE
author:              Philip Carlsen
maintainer:          plcplc@gmail.com

common lib-depends
  build-depends:
          base >=4.15.0.0,
          text,
          template-haskell,
          mtl,
          Earley,
          parsec

library
  import: lib-depends
  exposed-modules:
    DepTutMain
    DepTutQQ
  default-extensions:
    OverloadedStrings
  build-depends:
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable dep-tut
  main-is:             Main.hs
  build-depends:       base >=4.15.0.0,
                       dep-tut,
  hs-source-dirs:      src-exe
  ghc-options:         -Wall
  default-language:    Haskell2010

-- Live-image interpreter
executable mala
  import: lib-depends
  main-is: Main.hs
  build-depends: base,
                 directory,
                 text,
                 dep-tut,
                 bytestring,
                 reflex,
                 reflex-vty,
                 vty,
                 serialise,
                 generics-sop,
                 stm,
  hs-source-dirs: src-mala-exe
  ghc-options: -Wall -threaded
  default-language: Haskell2010



-- Wiki-like system to make judgements and inferences about statements. To be
-- used as a substrate for politics.
executable ubik
  main-is: Main.hs
  build-depends: base,
                  text,
                  mtl,
                  wai,
                  dep-tut,
                  http-types,
                  bytestring,
                  stm,
                  warp
  hs-source-dirs: src-ubik-exe
  ghc-options: -Wall
  default-language: Haskell2010

test-suite tests
  import: lib-depends
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    HelloSpec
    QQSpec

  build-depends: hspec,
                 hspec-expectations,
  build-tool-depends: hspec-discover:hspec-discover
  hs-source-dirs: src-tests src
  ghc-options:         -Wall
  default-language:    Haskell2010

